--- a/src/components/assessment-contacts/assessment-contacts.component.html
+++ b/src/components/assessment-contacts/assessment-contacts.component.html
@@ -18,8 +18,8 @@
                 <mat-icon>add_circle</mat-icon>
             </button><br><br>
         </div>
-        <div class="col-md-2">
-            <mat-card>Family Member #1</mat-card>
+        <div class="col-md-2 mat-body-strong div-label-center">
+            Family Member #1
         </div>
         <div class="col-md-3">
             <mat-form-field class="full-width-field">
@@ -35,8 +35,8 @@
         </div>
         <div class="col-md-4"></div>
 
-        <div class="col-md-2">
-            <mat-card>Spiritual Leader #1</mat-card>
+        <div class="col-md-2 mat-body-strong div-label-center">
+            Spiritual Leader #1
         </div>
         <div class="col-md-3">
             <mat-form-field class="full-width-field">
@@ -52,8 +52,8 @@
         </div>
         <div class="col-md-4"></div>
         
-        <div class="col-md-2">
-            <mat-card>Peer or Friend #1</mat-card>
+        <div class="col-md-2 mat-body-strong div-label-center">
+            Peer or Friend #1
         </div>
         <div class="col-md-3">
             <mat-form-field class="full-width-field">
@@ -73,8 +73,8 @@
             <br />
         </div>
         
-        <div class="col-md-2">
-            <mat-card>Family Member #2</mat-card>
+        <div class="col-md-2 mat-body-strong div-label-center">
+            Family Member #2
         </div>
         <div class="col-md-3">
             <mat-form-field class="full-width-field">
@@ -90,8 +90,8 @@
         </div>
         <div class="col-md-4"></div>
         
-        <div class="col-md-2">
-            <mat-card>Spiritual Leader #2</mat-card>
+        <div class="col-md-2 mat-body-strong div-label-center">
+            Spiritual Leader #2
         </div>
         <div class="col-md-3">
             <mat-form-field class="full-width-field">
@@ -107,8 +107,8 @@
         </div>
         <div class="col-md-4"></div>
         
-        <div class="col-md-2">
-            <mat-card>Peer or Friend #2</mat-card>
+        <div class="col-md-2 mat-body-strong div-label-center">
+            Peer or Friend #2
         </div>
         <div class="col-md-3">
             <mat-form-field class="full-width-field">
@@ -128,8 +128,8 @@
             <br />
         </div>
         
-        <div *ngIf="showAdditionalContacts" class="col-md-2">
-            <mat-card>Family Member #3</mat-card>
+        <div *ngIf="showAdditionalContacts" class="col-md-2 mat-body-strong div-label-center">
+            Family Member #3
         </div>
         <div *ngIf="showAdditionalContacts" class="col-md-3">
             <mat-form-field class="full-width-field">
@@ -145,8 +145,8 @@
         </div>
         <div *ngIf="showAdditionalContacts" class="col-md-4"></div>
 
-        <div *ngIf="showAdditionalContacts" class="col-md-2">
-            <mat-card>Spiritual Leader #3</mat-card>
+        <div *ngIf="showAdditionalContacts" class="col-md-2 mat-body-strong div-label-center">
+            Spiritual Leader #3
         </div>
         <div *ngIf="showAdditionalContacts" class="col-md-3">
             <mat-form-field class="full-width-field">
@@ -162,8 +162,8 @@
         </div>
         <div *ngIf="showAdditionalContacts" class="col-md-4"></div>
 
-        <div *ngIf="showAdditionalContacts" class="col-md-2">
-            <mat-card>Peer or Friend #3</mat-card>
+        <div *ngIf="showAdditionalContacts" class="col-md-2 mat-body-strong div-label-center">
+            Peer or Friend #3
         </div>
         <div *ngIf="showAdditionalContacts" class="col-md-3">
             <mat-form-field class="full-width-field">
