--- a/src/components/assessment-contacts/assessment-contacts.component.scss
+++ b/src/components/assessment-contacts/assessment-contacts.component.scss
@@ -5,3 +5,9 @@
   .div-contacts-message-p {
     padding: 15px;
   }
+  
+  .div-label-center {
+    display: flex;
+    justify-content: center; /* align horizontal */
+    align-items: center; /* align vertical */
+  }
