--- a/src/components/section/section.component.scss
+++ b/src/components/section/section.component.scss
@@ -1,9 +1,9 @@
 .section-card {
-    background: #33a69b;
+    background: #3AAFA9;
     color: white;
   }
 
   .section-card-subtitle {
-    background: #33a69b;
+    background: #3AAFA9;
     color: white;
   }
