--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,16 @@
 
-<div *ngIf="showLoader" class="row justify-content-center">
-  <div class="h-75">
-    <mat-spinner></mat-spinner>
+<div *ngIf="showLoader" class="row align-items-center justify-content-center" style="height: 100%;">
+  <div>
+    <mat-spinner [color]="'accent'"></mat-spinner>
   </div>
 </div>
-<div *ngIf="!showLoader">
+<div *ngIf="!showLoader" style="height: 100%;">
   <div *ngIf="user; else showLogin">
     <assessment-landing></assessment-landing>
   </div>
   <div>
     <ng-template #showLogin>
-      <div>
         <assessment-login></assessment-login>
-      </div>
     </ng-template>
   </div>
 </div>
