--- a/src/components/landing/landing.component.html
+++ b/src/components/landing/landing.component.html
@@ -1,19 +1,19 @@
 
-<mat-toolbar class="header">StonegateChurch Self Assessment
+<mat-toolbar class="header">Tony Robinson pastor & life coach
     <span class="spacer"></span>
     <button mat-raised-button *ngIf="user" (click)="logout()">Logout</button>
 </mat-toolbar>
 
-<mat-sidenav-container class="sidenav-container">
+<mat-sidenav-container class="sidenav-container" style="height: 100%;">
     <mat-sidenav opened mode="side">
         <mat-card class="sidenav-card">
             <assessment-nav></assessment-nav>
         </mat-card>
     </mat-sidenav>
-    <div>
+    <div style="height: 100%;">
         <router-outlet></router-outlet>
     </div>
      
 </mat-sidenav-container>
 
-<mat-toolbar class="footer">© www.stonegate.selfassessment, all rights reserved.</mat-toolbar>
+<mat-toolbar class="footer">Footer</mat-toolbar>
