--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~firebaseui/dist/firebaseui.css';
 
-html, body { 
+html { 
     height: 100%; 
 }
 
@@ -10,10 +10,12 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif; 
     height: 100%;
     background-image: url("./assets/subtle-web-background-3.jpg");
+    background: #3AAFA9;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
+
 
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '@angular/material/prebuilt-themes/purple-green.css';
