--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,48 +1,40 @@
 <div class="container-fluid div-container-background">
-    <section>
-        <div>
-            <h1 *ngIf="user" class="row justify-content-center mat-display-3">Welcome, {{user.fullName}}!</h1>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="row justify-content-center">
-                        <div class="mat-headline">The Goal of This Exercise
-                        </div>
-                        <p class="mat-subheading-1">Paul Tripp summarizes the universal human problem
-                            by saying, “Our self-perception is as
-                            accurate as a carnival mirror.” It is so easy to think one thing about ourself, while
-                            the
-                            opposite is
-                            actually true. Simply put, all of us have a need to grow in self-awareness. To state it
-                            even
-                            more
-                            strongly,
-                            there are few things as important as adequate self-awareness in a person’s life,
-                            especially
-                            if you are a
-                            leader of people.
-                            We want to serve you by urging you to consider the questions in the following
-                            exercise. <br> The goal of this exercise is simple, we want this leader to see (with more
-                            accuracy) who
-                            they are and
-                            who
-                            they are not, and then (by the grace of God) be content with who it is that God has made
-                            them to be.
-                            With
-                            your help, this person can gain more insight into who they are through someone other
-                            than
-                            themselves. We
-                            consider this a mercy from God and a beautiful picture of what it means to be known.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-8"></div>
-                <div class="col-md-4">
-                    <div class="row justify-content-center">
-                        <button mat-raised-button *ngIf="user" (click)="toAssessment()">Start Self
-                            Assessment</button>
-                    </div>
-                </div>
+    <div class="row align-items-center" style="height: 100%;">
+        <div class="col-md-5">
+            <h1 *ngIf="user" class="mat-display-3 align-center">Welcome, {{user.fullName}}!</h1>
+            <div class="mat-headline align-center">
+                The Goal of This Exercise
             </div>
+            <p class="mat-subheading-1 align-center">Paul Tripp summarizes the universal human problem
+                by saying, “Our self-perception is as
+                accurate as a carnival mirror.” It is so easy to think one thing about ourself, while
+                the
+                opposite is
+                actually true. Simply put, all of us have a need to grow in self-awareness. To state it
+                even
+                more
+                strongly,
+                there are few things as important as adequate self-awareness in a person’s life,
+                especially
+                if you are a
+                leader of people.
+                We want to serve you by urging you to consider the questions in the following
+                exercise. <br> The goal of this exercise is simple, we want this leader to see (with more
+                accuracy) who
+                they are and
+                who
+                they are not, and then (by the grace of God) be content with who it is that God has made
+                them to be.
+                With
+                your help, this person can gain more insight into who they are through someone other
+                than
+                themselves. We
+                consider this a mercy from God and a beautiful picture of what it means to be known.<br><br>
+                <button mat-raised-button *ngIf="user" (click)="toAssessment()">Start Self
+                    Assessment</button>
+            </p>
         </div>
-    </section>
+        <div class="col-md-7"></div>
+        <div class="col-md-12"></div>
+    </div>
 </div>
