--- a/src/components/login/login.component.html
+++ b/src/components/login/login.component.html
@@ -5,18 +5,16 @@
         </div>
         <div class="col">
             <div>
-                <mat-card assessmentMatElevationHover>
+                <mat-card class="mat-card-login" assessmentMatElevationHover>
                     <mat-card-header>
-                        <div class="mat-headline align-items-center">
-                            TONY ROBINSON <p class="small">&nbsp;&nbsp;pastor & life coach</p>
-                        </div>
+                        <img src="../../assets/TRLogo.png" style="background-position: center;">
                     </mat-card-header>
                     <mat-card-content>
- 
+
                         <firebase-ui (signInSuccessWithAuthResult)="successCallback($event)"
                             (signInFailure)="errorCallback($event)">
                         </firebase-ui>
-                        <p class="mat-small"><br>
+                        <p class="mat-small mat-card-p"><br>
                             If this is your first time logging in and you wish to use a non-Google email address,
                             you can register by clicking <b>Sign in with email</b>.
                             You will be asked to provide your full name and email address.
