--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -30,8 +30,7 @@
                 than
                 themselves. We
                 consider this a mercy from God and a beautiful picture of what it means to be known.<br><br>
-                <button mat-raised-button *ngIf="user" (click)="toAssessment()">Start Self
-                    Assessment</button>
+                <button class="btn draw-border" (click)="toAssessment()">Start Assessment</button>
             </p>
         </div>
         <div class="col-md-7"></div>
