--- a/src/components/nav/nav.component.html
+++ b/src/components/nav/nav.component.html
@@ -1,6 +1,8 @@
 <mat-list *ngFor="let menu of menuLinks" role="list">
-    <mat-list-item class="mat-nav-card-color" role="listitem" (click)="navigate(menu.label)" style="cursor: pointer;">
-      <mat-icon>home</mat-icon>
-      {{menu.label}}
-    </mat-list-item>
-  </mat-list>
+  <mat-list-item [ngSwitch]="menu.label" class="mat-nav-card-color" role="listitem" (click)="navigate(menu.label)"
+    style="cursor: pointer;">
+    <mat-icon *ngSwitchCase="'Home'">home</mat-icon>
+    <mat-icon *ngSwitchCase="'Admin'">admin_panel_settings</mat-icon>
+    {{menu.label}}
+  </mat-list-item>
+</mat-list>
