--- a/src/components/landing/landing.component.html
+++ b/src/components/landing/landing.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar class="header">Self-Awareness Guide
     <span class="spacer"></span>
-    <button mat-button *ngIf="user" (click)="logout()"><mat-icon>power_settings_new</mat-icon> Logout</button>
+    <button mat-button *ngIf="user" (click)="logout()">
+        <mat-icon>power_settings_new</mat-icon> Logout
+    </button>
 </mat-toolbar>
 
 <mat-sidenav-container class="sidenav-container">
@@ -13,4 +15,25 @@
 
 </mat-sidenav-container>
 
-<mat-toolbar class="footer">Footer</mat-toolbar>
+<mat-toolbar class="footer">Tony Robinson Coaching&nbsp;&nbsp;
+    <p>
+        <a href="https://www.facebook.com/utrob09" target="_blank">
+            <img border="0" width="32" height="32" src="../../assets/facebook.png">
+        </a>
+    </p>&nbsp;&nbsp;
+    <p>
+        <a href="https://twitter.com/t_rob" target="_blank">
+            <img border="0" width="32" height="32" src="../../assets/twitter.png">
+        </a>
+    </p>&nbsp;&nbsp;
+    <p>
+        <a href="https://www.instagram.com/utrob09/" target="_blank">
+            <img border="0" width="32" height="32" src="../../assets/instagram.png">
+        </a>
+    </p>&nbsp;&nbsp;
+    <p>
+        <a href="https://www.linkedin.com/in/tony-robinson-58437811/" target="_blank">
+            <img border="0" width="32" height="32" src="../../assets/linkedin.png">
+        </a>
+    </p>
+</mat-toolbar>
