--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,7 @@ body {
     min-width: 150px;
     min-height: -webkit-fill-available;
     box-shadow: 6px 0 6px rgba(0,0,0,.1);
+    height: 100%;
   }
   
     .header {
@@ -247,4 +248,10 @@ body {
 
 .mat-icon {
    vertical-align: middle;
+}
+
+.mat-chip-wrapper {
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
 }
