--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   </div>
 </div>
 <div *ngIf="!showLoader" style="height: 100%;">
+  <router-outlet name="peerassessmentoutlet"></router-outlet>
   <div *ngIf="user; else showLogin">
     <assessment-landing></assessment-landing>
   </div>
