--- a/src/components/peer-assessment/peer-assessment.component.html
+++ b/src/components/peer-assessment/peer-assessment.component.html
@@ -1,31 +1,35 @@
-<div class="container" style="padding-top:15px; background: white;">
-  <div class="row justify-content-center">
-    <div class="col-md-12 mat-headline">Peer Self-Assessment</div>
-    <div class="col-md-12 div-contacts-message-p">
-      <p>
-        Congratulations! You've been selected to help [ins name here] understand who they are just a little bit better.
-        To do so, please fill out the peer assessment. All answers with the
-        exception of the explaination answers are required, however, they are greatly encouraged.
-      </p>
-    </div>
+<div class="container" style="padding-top:15px; background: white;" *ngIf="peerAssessment">
+  <div class="mat-headline" *ngIf="peerAssessment.completed">
+    Thank you! This peer assessment has been completed.
   </div>
-
-  <form (ngSubmit)="onSubmit()" *ngIf="form" [formGroup]="form">
-    <div>
-      <div *ngFor="let section of sections" class="form-row justify-content-center">
-        <div class="col-md-7">
-          <assessment-section [section]="section" [questions]="questions" [form]="form">
-          </assessment-section>
+  <div *ngIf="!peerAssessment.completed">
+    <div class="row justify-content-center">
+      <div class="col-md-12 mat-headline">Peer Self-Assessment</div>
+      <div class="col-md-12 div-contacts-message-p">
+        <p>
+          Congratulations! You've been selected to help [ins name here] understand who they are just a little bit better.
+          To do so, please fill out the peer assessment. All answers with the
+          exception of the explaination answers are required, however, they are greatly encouraged.
+        </p>
+      </div>
+    </div>
+    <form (ngSubmit)="onSubmit()" *ngIf="form" [formGroup]="form">
+      <div>
+        <div *ngFor="let section of sections" class="form-row justify-content-center">
+          <div class="col-md-7">
+            <assessment-section [section]="section" [questions]="questions" [form]="form">
+            </assessment-section>
+          </div>
         </div>
       </div>
-    </div>
-    <br /><br />
-    <div class="form-row justify-content-center">
-      <div class="col-md-7">
-        <button mat-raised-button type="submit" [disabled]="!form.valid">Finish</button>
-        <button mat-raised-button type="submit">Finish</button>
+      <br /><br />
+      <div class="form-row justify-content-center">
+        <div class="col-md-7">
+          <button mat-raised-button type="submit" [disabled]="!form.valid">Finish</button>
+          <button mat-raised-button type="submit">Finish</button>
+        </div>
       </div>
-    </div>
-    <br /><br /><br />
-  </form>
+      <br /><br /><br />
+    </form>
+  </div>
 </div>
