--- a/src/components/self-assessment/self-assessment.component.html
+++ b/src/components/self-assessment/self-assessment.component.html
@@ -22,8 +22,8 @@
       </div>
       <br /><br />
       <div class="form-row">
-        <button mat-raised-button type="submit" [disabled]="!form.valid">Finish</button>
-        <button mat-raised-button type="submit">Finish</button>
+        <button mat-raised-button type="submit" [disabled]="!form.valid || submitted">Finish</button>
+        <button mat-raised-button type="submit" [disabled]="submitted">Finish</button>
       </div>
       <br /><br /><br />
     </form>
