--- a/src/components/admin/admin.component.html
+++ b/src/components/admin/admin.component.html
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                     <mat-action-row>
-                        <button mat-button color="warn" (click)="sendReminders(assessment.selfAssessmentId)">
+                        <button mat-button color="warn" (click)="sendReminders(assessment)">
                             <mat-icon>email</mat-icon> Send Reminder
                         </button>
                         <button mat-button (click)="generateSelfAssessmentReport(assessment.selfAssessmentId)">
