--- a/src/components/assessment-contacts/assessment-contacts.component.html
+++ b/src/components/assessment-contacts/assessment-contacts.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="col-md-4"></div>
         <div class="col-md-12">
-            <button mat-mini-fab color="primary" [disabled]="!contactListForm.valid" (click)="showAdditionalContacts = true;"
+            <button mat-mini-fab color="primary" (click)="showAdditionalContacts = true;"
             matTooltip="Show additional contact group">
                 <mat-icon>add_circle</mat-icon>
             </button><br><br>
